edited solutionArray method a bit to add mode (DFS vs BFS)